--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -1576,7 +1576,7 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
     z-index: 2;
 }
 
-em, i, .guimenu {
+em, i, .guimenu, .intraxref {
     font-style: italic;
 }
 
