work in progress
Building with FOP doesn't work, only with xep yet

--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -2307,6 +2307,19 @@ ul {
 li > p {
     font-weight: normal;
 }
+.step-optional {
+    font-size: 8pt;
+    color: #FFFFFF;
+    background-color: #439239;
+    display: inline-block;
+    padding: 0mm 2mm 0mm 2mm;
+    margin-top: 10px;
+    vertical-align: super;
+    
+}
+.step-optional + p{
+    margin-top: 0;
+}
 
 .procedure > p {
     margin: 0 10px 5px;
