Support of performance="optional" in step
Stylesheets detect the attribute performance=optional in a step now. Changes in fo/lists.xsl and xhtml/lists.xsl. Already possible for the following languages: en, es, de, ru, da, it.

--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -2308,13 +2308,7 @@ li > p {
     font-weight: normal;
 }
 .step-optional {
-    font-size: 8pt;
-    color: #FFFFFF;
-    background-color: #439239;
-    display: inline-block;
-    padding: 0mm 2mm 0mm 2mm;
-    margin-top: 10px;
-    vertical-align: super;
+    color: #666;
     
 }
 .step-optional + p{
