Support of performance="optional" in step (fixes issue #245)
Stylesheets detect the attribute performance=optional in a step now.
Changes in fo/lists.xsl and xhtml/lists.xsl. Already possible for the
following languages: en, es, de, ru, da, it.

--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -2308,6 +2308,15 @@ li > p {
     font-weight: normal;
 }
 
+.step-optional {
+    color: #666;
+    font-style: italic;
+}
+
+.step-optional + p {
+    margin-top: 0;
+}
+
 .procedure > p {
     margin: 0 10px 5px;
 }
