First draft of task in XHTML
TODO:
* CSS rules need to be improved, but the structure should be there
* Language files; currently only "en" is supported for a proof of
  concept

--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -1724,13 +1724,13 @@ p, .simplelist td {
 }
 
 .title .xref, .subtitle .xref, .table-title .xref, .example-title .xref,
-.figure-title .xref, .procedure-title .xref, .orderedlist-title .xref,
+.figure-title .xref, .procedure-title .xref, .task-title .xref, .orderedlist-title .xref,
 .itemizedlist-title .xref, .variablelist-title .xref, .qandadiv-title .xref,
 .title .link, .subtitle .link, .table-title .link, .example-title .link,
-.figure-title .link, .procedure-title .link, .orderedlist-title .link,
+.figure-title .link, .procedure-title .link, .task-title .link, .orderedlist-title .link,
 .itemizedlist-title .link, .variablelist-title .link, .qandadiv-title .link,
 .title .ulink, .subtitle .ulink, .table-title .ulink, .example-title .ulink,
-.figure-title .ulink, .procedure-title .ulink, .orderedlist-title .ulink,
+.figure-title .ulink, .procedure-title .ulink, .task-title .ulink, .orderedlist-title .ulink,
 .itemizedlist-title .ulink, .variablelist-title .ulink, .qandadiv-title .ulink {
     text-decoration: underline;
 }
@@ -1765,6 +1765,7 @@ p, .simplelist td {
 .figure-title .xref:hover, .figure-title .xref:focus, .figure-title .xref:active,
 .example-title .xref:hover, .example-title .xref:focus, .example-title .xref:active,
 .procedure-title .xref:hover, .procedure-title .xref:focus, .procedure-title .xref:active,
+.task-title .xref:hover, .task-title .xref:focus, .task-title .xref:active,
 .orderedlist-title .xref:hover, .orderedlist-title .xref:focus, .orderedlist-title .xref:active,
 .itemizedlist-title .xref:hover, .itemizedlist-title .xref:focus, .itemizedlist-title .xref:active,
 .variablelist-title .xref:hover, .variablelist-title .xref:focus, .variablelist-title .xref:active,
@@ -2001,6 +2002,7 @@ catch those. */
 
 .list-of-figures dl, .list-of-tables dl,
 .list-of-examples dl, .list-of-procedures dl,
+.list-of-tasks dl,
 .list-of-equations dl {
     margin: 5px 0 17px 0;
     padding: 0 0 0 30px;
@@ -2107,7 +2109,7 @@ a:hover .package, a:focus .package, a:active .package {
     color: #666;
 }
 
-.procedure-title, .table-title, .example-title,
+.procedure-title, .table-title, .example-title, .task-title,
 .figure-title, .orderedlist-title, .variablelist-title,
 .itemizedlist-title, .qandadiv-title {
     font-size: 14px;
@@ -2176,7 +2178,7 @@ a:hover .package, a:focus .package, a:active .package {
     text-transform: none;
 }
 
-.procedure-contents {
+.procedure-contents, .task-contents {
     border-left: 3px solid #9CC897;
     font-weight: normal;
     margin: 17px 0 17px;
@@ -2187,7 +2189,8 @@ a:hover .package, a:focus .package, a:active .package {
     display: block;
 }
 
-.procedure-title-wrap + .procedure-contents {
+.procedure-title-wrap + .procedure-contents,
+.task-title-wrap + .task-contents {
     margin: 10px 0 24px;
 }
 
