--- a/hpe/static/css/style.css
+++ b/hpe/static/css/style.css
@@ -36,7 +36,7 @@ a {
     height: 0;
 }
 
- /* Selection colour, the unprefixed Webkit version & the -moz-prefixed
+ /* Selection color, the unprefixed Webkit version & the -moz-prefixed
     version must be on separate lines for it to work. */
 ::selection {
     background-color: #00B388;
@@ -1694,7 +1694,7 @@ p a:visited {
 }
 
 code, .command, .keycap, .replaceable, .package {
-    font-family: 'HPE Simple', 'HPE Simple TT', 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
+    font-family: 'HPE Simple', 'DejaVu Sans Mono', 'Menlo', 'Andale Mono', monospace;
     font-weight: normal;
     padding: 0 4px;
     border-bottom: 1px solid #C1C1C3;
@@ -1710,6 +1710,7 @@ h3 > code, h3 > .command, h3 > .replaceable, h3 > .package,
 h4 > code, h4 > .command, h4 > .replaceable, h4 > .package,
 h5 > code, h5 > .command, h5 > .replaceable, h5 > .package,
 h6 > code, h6 > .command, h6 > .replaceable, h6 > .package,
+span.name > code, span.name > .command, span.name > .replaceable, span.name > .package,
 td > code, td > .command, td > .replaceable, td > .package,
 th > code, th > .command, th > .replaceable, th > .package,
 p > code, p > .command, p > .replaceable, p > .package {
@@ -1797,7 +1798,7 @@ code, .literal, .replaceable, .package {
 }
 
 .screen, .programlisting, .computeroutput, .userinput, .synopsis {
-    font: normal 15px 'HPE Simple', 'HPE Simple TT', 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
+    font: normal 15px 'HPE Simple', 'DejaVu Sans Mono', 'Menlo', 'Andale Mono', monospace;
     color: #333;
     line-height: 125%;
 }
