--- a/hpe/static/css/style.css
+++ b/hpe/static/css/style.css
@@ -50,14 +50,14 @@ a {
 
 body {
     background-color: #FFF;
-    font-family: 'MetricHPE', 'Open Sans', Helvetica, FreeSans, sans-serif;
+    font-family: 'Open Sans', 'DejaVu Sans', 'Verdana', sans-serif;
     line-height: 140%;
 }
 
 html, body {
     height: 100%;
     min-width: 200px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 #_toolbar-bottom,
@@ -793,7 +793,7 @@ body.no-svg .ulink:after, body.no-svg .link:after {
     width: 155px;
     height: 34px;
     padding: 0 20px 0 5px;
-    font: 16px 'MetricHPE', 'Open Sans', Helvetica, FreeSans, sans-serif;
+    font: 16px 'Open Sans', 'DejaVu Sans', 'Verdana', sans-serif;
     display: block;
     background-color: #FFF;
     border: 1px solid #CCE9A7;
@@ -865,7 +865,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     max-width: 998px;
     min-width: 130px;
     display: block;
-    font-size: 14px;
+    font-size: 12px;
     margin: 0 auto;
 }
 
@@ -979,7 +979,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     padding: 0 7px;
     color: #333;
     background-color: #EFEFF0;
-    font-size: 16px;
+    font-size: 14px;
     height: 22px;
     vertical-align: middle;
     line-height: 22px;
@@ -1263,7 +1263,7 @@ h6.version-info {
 
 
 .sect1 .subtitle, .chapter .subtitle {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: normal;
     padding: 10px 0 20px;
     margin: 0;
@@ -1298,7 +1298,7 @@ h6.version-info {
 
 .sect4 .title, .single .sect4 .title,
 .sect5 .title, .single .sect5 .title {
-    font-size: 18px;
+    font-size: 16px;
     padding: 53px 0 0;
     margin: 0 0 -33px;
     position: relative;
@@ -1317,7 +1317,7 @@ h6.version-info {
 
 .legal-section p {
     color: #333 !important;
-    font-size: 14px !important;
+    font-size: 12px !important;
 }
 
 .legal-section .screen {
@@ -1326,11 +1326,11 @@ h6.version-info {
 }
 
 .legal-section .sect2 .title {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .legal-section .sect3 .title {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .name, .refentry h2, .refentrytitle a, h2, .indexdiv h3, .qandadiv-title,
@@ -1436,7 +1436,7 @@ a.leads-to-page:active .name, .refentrytitle a:hover, .refentrytitle a:focus,
 }
 
 .legalnotice p, .legalnotice td, .legalnotice .simplelist td {
-    font-size: 14px;
+    font-size: 12px;
     color: #666;
     line-height: 140%;
     margin: 5px 0 0 0;
@@ -1726,7 +1726,7 @@ p a:visited {
 }
 
 code, .command, .keycap, .replaceable, .package {
-    font-family: 'HPE Simple', 'DejaVu Sans Mono', 'Menlo', 'Andale Mono', monospace;
+    font-family: 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
     font-weight: normal;
     padding: 0 4px;
     border-bottom: 1px solid #C1C1C3;
@@ -1830,7 +1830,7 @@ code, .literal, .replaceable, .package {
 }
 
 .screen, .programlisting, .computeroutput, .userinput, .synopsis {
-    font: normal 15px 'HPE Simple', 'DejaVu Sans Mono', 'Menlo', 'Andale Mono', monospace;
+    font: normal 13px 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace;
     color: #333;
     line-height: 125%;
 }
@@ -1890,7 +1890,7 @@ code, .literal, .replaceable, .package {
     border-radius: 10px;
     background-color: #00B388;
     color: #FFF;
-    font-family: 'MetricHPE', 'Open Sans', Helvetica, FreeSans, sans-serif;
+    font-family: 'Open Sans', 'OpenSans', Helvetica, FreeSans, sans-serif;
     font-size: 13px;
     line-height: 13px;
     font-weight: 600;
@@ -2181,7 +2181,7 @@ ol.procedure {
 }
 
 ol.procedure .title {
-    font-size: 18px;
+    font-size: 16px;
     color: #333;
     font-weight: 600;
     padding: 0;
@@ -3073,16 +3073,16 @@ p.ds-message {
     .bibliography .qandaset .title, .reference .qandaset .title,
     .part .qandaset .title, .glossary .qandaset .title, .set .subtitle,
     .book .subtitle, .article .subtitle {
-        font-size: 24px;
+        font-size: 22px;
     }
 
     .sect2 .title, .single .sect2 .title, .sect1 .qandaset .title {
-        font-size: 22px;
+        font-size: 20px;
     }
 
     .sect3 .title, .single .sect3 .title,
     .sect2 .qandaset .title, .refentry h2, h2, .indexdiv h3 {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 
