Give draft background a chance to shine through
Reported by Frank, thanks.

--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -106,7 +106,7 @@ html, body {
 }
 
 #_content {
-    background: #FFF url(../images/dots-gray.png) repeat-x scroll 0px 0px;
+    background: transparent url(../images/dots-gray.png) repeat-x scroll 0px 0px;
     min-height: 139px;
     clear: both;
     min-width: 150px;
